changed queue from ArrayList to LinkedList. should be more performant
scarab JAC119